--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -33,3 +33,5 @@ auto_impl.workspace = true
 clap = {version = "4.3", features = ["derive"]}
 thiserror.workspace = true
 tracing.workspace = true
+ssz_rs = {git = "https://github.com/ralexstokes/ssz-rs"}
+tree_hash = "0.6.0"
