--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -24,6 +24,7 @@ hyper = { workspace = true }
 reqwest = { workspace = true }
 tokio = { workspace = true }
 tokio-tungstenite = "0.16"
+tokio-stream = { workspace = true }
 tower-http = { workspace = true }
 url = { workspace = true }
 tonic = "0.10"
