--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -52,6 +52,7 @@ auto_impl.workspace = true
 rand = "0.8"
 thiserror = { workspace = true }
 tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 uuid = { workspace = true }
 bytes = "1.5"
 moka = "0.9"
