--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -34,4 +34,5 @@ clap = { version = "4.3", features = ["derive"] }
 thiserror.workspace = true
 tracing.workspace = true
 ssz_rs = {git = "https://github.com/ralexstokes/ssz-rs", rev = "1df4cd9", features = ["sha2-asm"]}
+sha2 = "0.10.8"
 tree_hash = "0.6.0"
