--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -36,3 +36,7 @@ tracing.workspace = true
 ssz_rs = {git = "https://github.com/ralexstokes/ssz-rs", rev = "1df4cd9", features = ["sha2-asm"]}
 sha2 = "0.10.8"
 tree_hash = "0.6.0"
+
+[dev-dependencies]
+tree_hash = "0.6.0"
+tree_hash_derive = "0.6.0"
